createPortal on modals, z-index fixes

--- a/src/widgets/registrationModal/ui/registrationModal.scss
+++ b/src/widgets/registrationModal/ui/registrationModal.scss
@@ -8,6 +8,7 @@
     max-height: 100dvh;
     scrollbar-width: thin;
     scrollbar-color: #393B3B transparent;
+    color: white;
 
         // скроллбар
         &::-webkit-scrollbar {
